--- a/wiki/pages/project-implementation.html
+++ b/wiki/pages/project-implementation.html
@@ -69,10 +69,10 @@
 {% block page_content %}
  <div class="content">
                 <div class="m-5 mb-16">
-                    <p class="mt-5 MAIN-STUFF" id="section1">1.Implementation<br></p>
+                    <p class="mt-5 MAIN-STUFF" id="section1">Implementation<br></p>
                     <p style="font-family: 'Poppins', sans-serif; font-size: 20px;"> 
                       Triclocarban (TCC) concentration in sludge is relatively higher than in effluent, and this is difficult to degrade due to the compounds’ chemical stability and high hydrophobicity. To combat this, our team has designed a packed bed bioreactor to be set up in the sludge treatment plant and efficiently degrade TCC into non-toxic compounds using our chassis.
-                      <br><br><br>
+                      <br><br>
                       Bioreactors are tanks where raw materials are converted into biochemical products using microbial, human, plant, or animal cells. Bioreactors create an environment that is suitable for the growth of the cells that are cultured within it. In wastewater treatment plants, bioreactors are designed to support an active biological climate that can help bacteria and protozoa survive. We have opted for a packed bed reactor as it helps establish better contact between the fluids and the solids. We have further ideated our bioreactor's packing material and other relevant parameters to ensure that TCC gets degraded into its non-toxic compounds.   
                       <br><br>
                       <p class="mt-5 MAIN-STUFF" id="section2">Bioreactor<br></p>
@@ -88,10 +88,10 @@
                       Suppose we were to implement our bioreactor in wastewater; the common suggestion is to go for a continuous flow bioreactor, as this allows better efficiency and higher amounts of water can be purified in a given time. However, that may be inefficient as our bacteria would require time to degrade the contaminants and hence require longer residence time in the continuous bioreactor. Hence, we decided to design a packed bed bioreactor with immobilized bacteria, with packing material as biochar, which will provide a nutritious environment for the growth of the bacteria, hence reducing the lag phases, provided TCC enters the cell by passive diffusion and, therefore gets broken down inside the cell.<br><br>
                       The concentration of  TCC in sludge (21000 ng/g dry weight) is significantly higher than in effluent (13000 ng/g dry weight) [2]. We decided to implement our sludge-based bioreactor when the sludge is in a liquid state (97% to 99% water content ) before the drying and further treatment process to turn the liquid sludge into biosolids. We got this idea through one of our human practices visits to a wastewater treatment plant in West Bengal, India.  
                    </p>
-                   <br><br><br>
+                   <br><br>
                     <p class="mt-5 MAIN-STUFF" id="section3">Biochar<br></p>
                     <img src="https://static.igem.wiki/teams/4641/wiki/implementation/locally-derived-biochar.jpeg" class="img-fluid rounded mx-auto d-block mt-4">
-                    <center><b>Fig 3 :</b>Locally derived from the burning of rice husk and is a waste product of rice mill industries</center>
+                    <center><b>Fig 3 :</b>Locally derived biochar from the burning of rice husk and is a waste product of rice mill industries</center>
                     <br><br>
                     <p style="font-family: 'Poppins', sans-serif; font-size: 20px;line-height: 50px;">Biochar is a carbon-rich substance produced by the thermal combustion of organic waste in an oxygen-limited environment. Biochar has a high surface area, due to which it exhibits micropollutant and cell adsorption properties. It has high cation exchange capacity and stability, making it useful for packing material for the packed bed bioreactor. Biochar is a simple, affordable, and effective choice for adsorption of our target contaminant, triclocarban (TCC). It is also locally derived from rice mills in our locality. The biochar has the perfect pore size of (0.6 to 0.8 nanometers) required to adsorb TCC efficiently.
                       <br><br>
@@ -114,7 +114,7 @@
                      <br>
                      Since a Raschig ring structure provides maximum surface area, we chose to use a Raschig ring made of biochar as our packing material(detailed below).  
                       </p>
-          <br><br><br><br>
+          <br><br>
            
                     <p class="mt-3 MAIN-STUFF" id="section4">Raschig ring<br></p>
                     <img src="https://static.igem.wiki/teams/4641/wiki/implementation/raschig-ring.png" class="img-fluid rounded mx-auto d-block mt-4">
@@ -252,15 +252,15 @@
                      <p class="mt-5 MAIN-STUFF" id="section8"><br>Regeneration of biochar</p>
                      <p style="font-family: 'Poppins', sans-serif; font-size: 20px;"> 
                       Regeneration of biochar is done to clear the active sites of biochar of adsorbed compounds left at the end of a process. Regeneration of biochar after the adsorption process enables it to improve the lifespan of a given packed bed. This reduces the operational costs of the process it is being utilized in. Hence, for our solution, the regeneration of biochar is essential for optimizing the wastewater treatment plant's economic efficiency.
-                      <br><br><br>
+                      <br><br>
                       Biochar regeneration employs the opposite process of adsorption, and the techniques used can be widely classified as either adsorbate desorption or adsorbate decomposition. The adsorbate decomposition method involves decomposing the adsorbed materials into less toxic byproducts or completely mineralizing the adsorbed pollutants. On the other hand, adsorbate desorption involves breaking bonds between the biochar surface and the adsorbate (contaminants) by thermal or non-thermal methods [13].
-                      <br><br><br>
+                      <br><br>
                       After our batch process for the degradation of triclocarban, we plan on using n-hexane as a solvent to regenerate the biochar. This regeneration would clear the active sites of undegraded triclocarban and other compounds. A suitable solvent (adsorbent) for regeneration should show good reusability and recyclability in industrial processes [14].
                       <br><br><br>
                       We chose n-hexane as our solvent for this process due to its relatively low boiling point (69 °C) [15]. This allows for easy evaporation and condensation, which makes it easily recyclable. 
                       n-hexane is also relatively cheap and non-toxic to the environment and the bacterias in the sludge.                      
                        </p>
-                       <br><br><br>
+                       <br><br>
                        <p class="mt-5 MAIN-STUFF" id="section9">Toggling Mechanism<br></p>
                        <p style="font-family: 'Poppins', sans-serif; font-size: 20px;">To treat the sludge which is continuously getting generated from the wastewater treatment plant along with having a regeneration process, we propose a toggling mechanism where 2 bioreactors will be present but only one will work at a time while the other will get regenerated .
                         The toggling time is kept in such a way that our bacteria will have time to grow and degrade TCC upto 90% efficiency. From the calculations done in the model page, we decided that the toggling time or the time for which the sludge remains in one of the bioreactor before it is switched to the other bioreactor is 2 days at the max.
@@ -277,37 +277,37 @@
 <br><br><br>
 
                          </p>
-                         <br><br><br>
+                         <br><br>
                          <p class="mt-5 MAIN-STUFF" id="section10">References<br></p>
                          <p style="font-family: 'Poppins', sans-serif; font-size: 20px;"> 
                           [1]Yun, H., Liang, B., Qiu, J., Zhang, L., Zhao, Y., Jiang, J., & Wang, A. (2017). Functional characterization of a novel amidase involved in biotransformation of triclocarban and its dehalogenated congeners in Ochrobactrum sp. TCC-2. Environmental Science & Technology, 51(1),291-300. <a href="https://doi.org/10.1021/acs.est.6b04885">https://doi.org/10.1021/acs.est.6b04885</a>
-                          <br><br><br>
+                          <br><br>
                           [2] Subedi, B., Balakrishna, K., Joshua, D. I., & Kannan, K. (2017). Mass loading and removal of pharmaceuticals and personal care products including psychoactives, antihypertensives, and antibiotics in two sewage treatment plants in southern India. Chemosphere, 167, 429-437. <a href="https://doi.org/10.1016/j.chemosphere.2016.10.026">https://doi.org/10.1016/j.chemosphere.2016.10.026</a> 
-                          <br><br><br>
+                          <br><br>
                           [3]Jenjaiwit, S., Supanchaiyamat, N., Hunt, A. J., Ngernyen, Y., Ratpukdi, T., & Siripattanakul-Ratpukdi, S. (2021). Removal of triclocarban from treated wastewater using cell-immobilized biochar as a sustainable water treatment technology. Journal of Cleaner Production, 320, 128919. <a href="https://doi.org/10.1016/j.jclepro.2021.128919">https://doi.org/10.1016/j.jclepro.2021.128919</a>
-                          <br><br><br>
+                          <br><br>
                           [4]Mohammadi, A. (2021). Overview of the benefits and challenges associated with pelletizing biochar. Processes, 9(9), 1591<a href="https://doi.org/10.3390/pr9091591">https://doi.org/10.3390/pr9091591</a>
-                          <br><br><br>
+                          <br><br>
                           [5]Hu, Q., Shao, J., Yang, H., Yao, D., Wang, X., & Chen, H. (2015). Effects of binders on the properties of bio-char pellets. Applied Energy, 157,508-516.<a href="https://doi.org/10.1016/j.apenergy.2015.05.019">https://doi.org/10.1016/j.apenergy.2015.05.019</a>
-                          <br><br><br>
+                          <br><br>
                           [6]Villora, J. M., Baudín, C., Callejas, P., & Flora Barba, M. (2004). Influence of the processing route on reliability of Raschig rings for wastewater treatments. Key Engineering Materials, 264, 2437-2440.<a href="https://doi.org/10.4028/www.scientific.net/KEM.264-268.2437">https://doi.org/10.4028/www.scientific.net/KEM.264-268.2437</a>
-                          <br><br><br>
+                          <br><br>
                           [7]Salvi, S., & Paranjape, A. P. (2017, February). Comparison of different types of Raschig rings. In 2017 Third International Conference on Advances in Electrical, Electronics, Information, Communication and Bio-Informatics (AEEICB) (pp. 56-60). IEEE.<a href="https://doi.org/10.1109/AEEICB.2017.7972383">https://doi.org/10.1109/AEEICB.2017.7972383</a>
-                          <br><br><br>
+                          <br><br>
                           [8]Jenjaiwit, S., Supanchaiyamat, N., Hunt, A. J., Ngernyen, Y., Ratpukdi, T., & Siripattanakul-Ratpukdi, S. (2021). Removal of triclocarban from treated wastewater using cell-immobilized biochar as a sustainable water treatment technology. Journal of Cleaner Production, 320, 128919.<a href="https://doi.org/10.1016/j.jclepro.2021.128919">https://doi.org/10.1016/j.jclepro.2021.128919</a>
-                          <br><br><br>
+                          <br><br>
                           [9] Obtained from IQS Directory : <a href="https://www.iqsdirectory.com/articles/pressure-gauge.html#:~:text=Pressure%20gauges%20are%20an%20essential,of%20pressure%20in%20a%20system.">https://www.iqsdirectory.com/articles/pressure-gauge.html#:~:text=Pressure%20gauges%20are%20an%20essential,of%20pressure%20in%20a%20system. </a> 
-                          <br><br><br>
+                          <br><br>
                           [10] Obtained from Tamson: <a href="https://tameson.com/pages/pressure-gauge-selection#:~:text=The%20following%20are%20common%20types,and%20are%20not%20highly%20viscous.">https://tameson.com/pages/pressure-gauge-selection#:~:text=The%20following%20are%20common%20types,and%20are%20not%20highly%20viscous.</a> 
-                          <br><br><br>
+                          <br><br>
                           [11] Shi, Y., Chen, H., Chen, W., Ye, G., Qu, J., Li, J., ... & Duan, X. (2023). Effects of particle shape and packing style on ethylene oxidation reaction using particle-resolved CFD simulation. Particuology, 82, 87-97 <a href="https://doi.org/10.1016/j.partic.2023.01.012">https://doi.org/10.1016/j.partic.2023.01.012</a>
-                          <br><br><br>
+                          <br><br>
                           [12] Dai, G., Huangfu, J., Wang, X., Du, S., & Zhao, T. (2023). A Review of Radiative Heat Transfer in Fixed-Bed Particle Solar Receivers. Sustainability, 15(13), 9918 <a href="https://doi.org/10.3390/su15139918">https://doi.org/10.3390/su15139918</a>
-                          <br><br><br>
+                          <br><br>
                           [13] Alsawy, T., Rashad, E., El-Qelish, M. et al. A comprehensive review on the chemical regeneration of biochar adsorbent for sustainable wastewater treatment. npj Clean Water 5, 29 (2022). <a href="https://doi.org/10.1038/s41545-022-00172-3">https://doi.org/10.1038/s41545-022-00172-3</a>
-                          <br><br><br>
+                          <br><br>
                           [14] Yingjie Dai, Naixin Zhang, Chuanming Xing, Qingxia Cui, Qiya Sun, The adsorption, regeneration and engineering applications of biochar for removal organic pollutants: A review,Chemosphere,Volume 223,2019,Pages 12-27,ISSN 0045-6535, <a href="https://doi.org/10.1016/j.chemosphere.2019.01.161.">https://doi.org/10.1016/j.chemosphere.2019.01.161.</a> 
-                          <br><br><br>
+                          <br><br>
                           [15]  M. A. Alkhaldi (2018) Estimation of boiling points by investigations of viscosity Arrhenius behaviours in Methyl Benzoate + n-Hexane binary liquid systems at atmospheric pressure, Physics and Chemistry of Liquids, 56:2, 250-265,<a href="https://doi.org/10.1080/00319104.2017.1327582">https://doi.org/10.1080/00319104.2017.1327582</a>
                            </p>
 {% endblock %}
