Adding sidebar movement

--- a/wiki/pages/inclusivity.html
+++ b/wiki/pages/inclusivity.html
@@ -61,7 +61,7 @@
                 <figure>
                     <img class="img-fluid" src="https://static.igem.wiki/teams/4641/wiki/inclusivity/inclusivity-mindmap.png"> 
                     <figcaption style="text-align:center">This mind map depicts how we’ve aimed to make our project inclusive to different communities</figcaption>
-                    </figure>
+                </figure>
 
              <p class="mt-5 sub-stuff"> Our team has attempted to explore what groups are <b>underrepresented</b> in science. Particularly in the country that our team is from, India. Through our exploration, we have identified multiple groups traditionally underrepresented in science due to social stigma and financial barriers that prevent them from crossing the threshold and bridging the gap to access scientific avenues.<br><br>
 
@@ -78,7 +78,7 @@ We also used a Bio-Art competition and a music composition to ensure that we tau
 
             <img class="img-fluid" src="https://static.igem.wiki/teams/4641/wiki/inclusivity/inclusivity-mindmap.png"> 
 
-            <p class="mt-5 MAIN-STUFF" id="section2">Crossing Language Barriers</p>
+            <p class="mt-5 MAIN-STUFF" id="section3">Crossing Language Barriers</p>
 
             <p class="mt-5 sub-stuff"> India has 22 official languages with hundreds of regional dialects with its own layers of dynamics in cultural and social diversity. Access to scientific information should not be restricted by these language barriers. Regional languages bridge these gaps, ensuring individuals from diverse linguistic backgrounds can access and contribute to scientific knowledge. We can empower communities to understand and apply scientific findings to their contexts, fostering sustainable practices and development.<br> </p>
 
@@ -89,7 +89,7 @@ We also used a Bio-Art competition and a music composition to ensure that we tau
             </ul>
             </p>
 
-            <div id="carouselExampleControls1" class="carousel slide" data-bs-ride="carousel">
+            <div id="carouselExampleControls1" class="carousel-dark slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                     <img src="https://static.igem.wiki/teams/4641/wiki/inclusivity/dkshippocampus.jpeg" class="d-block w-100" >
@@ -120,7 +120,7 @@ We also used a Bio-Art competition and a music composition to ensure that we tau
                 </button>
             </div>
 
-            <p class="mt-5 MAIN-STUFF"> Interacting with Specially-Abled Individuals </p> 
+            <p class="mt-5 MAIN-STUFF" id="section4"> Interacting with Specially-Abled Individuals </p> 
 
             <p class="mt-5 sub-stuff"> Differently abled people and people with neurodivergence are often left out of scientific education for various reasons; this often means that advancements in science and technology are often only accessible to abled people, and persons with disabilities often find it challenging to integrate into and contribute to STEM communities. We attempted to reach out to as many sections of society as possible, tailoring our approach to better fit certain groups.<br><br> </p>
 
@@ -128,7 +128,7 @@ We also used a Bio-Art competition and a music composition to ensure that we tau
                 <li>In order to make sure that science reaches the specially-abled too, we visited “ASARE”- a center for autistic and learning disorders. There, we engaged in a fun coloring activity and performed a skit in a regional language, Kannada to convey our project to them in simple terms. We used graphical illustrations of soap, a toxic chemical (triclocarban) and a good bacteria to explain how our genetically modified bacteria would degrade the harmful chemicals present in daily use products like handwash, detergents and several others. The people loved all the activities and interacted with us. We also had a music and dance performance by a few of our team members to draw their attention and keep them involved. Followed by this, they even performed a dance out of their happiness for us and greeted us with “thank you” in the sweetest ways possible.  <br><br> </li>
             </ul>
 
-            <div id="carouselExampleControls" class="carousel-dark slide" data-bs-ride="carousel">
+            <div id="carouselExampleControls2" class="carousel-dark slide" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
       <img src="https://static.igem.wiki/teams/4641/wiki/inclusivity/asare1.jpeg" class="d-block w-100" alt="...">
@@ -151,11 +151,11 @@ We also used a Bio-Art competition and a music composition to ensure that we tau
   </div>
 
   
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls2" data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Previous</span>
   </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls2" data-bs-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Next</span>
   </button>
@@ -165,7 +165,7 @@ We also used a Bio-Art competition and a music composition to ensure that we tau
       <li>Much education and outreach rely primarily on visual aids; this makes it difficult for those with visual impairment to understand or contribute to science adequately. We decided to use music to communicate scientific concepts so that it would be accessible to those with visual disabilities while appealing to those with non-scientific backgrounds. We collaborated with musicians to create a composition using the amino acids comprising our protein tccA amidase as a basis for the notes in the sequence; this also allowed us to communicate biological concepts such as codons, protein construction, and modification using musical analogies that most people understand. It was an interactive approach to spark curiosity about science within the minds of the non-scientific community.<br><br></li>
     </ul>
 </p>
-    <p class="mt-5 MAIN-STUFF"> Regional Diversity </p>
+    <p class="mt-5 MAIN-STUFF" id="section5"> Regional Diversity </p>
 
     <p class="mt-5 sub-stuff"> Our team comprises students from different regions of India, and our interaction with people made us realize the importance of reaching out to various regional populations. Our goal is to make science accessible to all. We used media as a means to communicate with a wider variety of audience ranging from the youth to senior citizens with no barriers created by the community. </p>
 <p class="mt-5 sub-stuff">
@@ -187,7 +187,7 @@ We also used a Bio-Art competition and a music composition to ensure that we tau
       <li>Not only this, we also had a set of five articles published on Medium relating to various aspects of synthetic biology. It would help broaden the horizons of the general public around us and emphasize how synthetic biology is not just limited to GMOs, but also has applications in numerous fields.</li>
       </ul>
 </p>
-      <div id="carouselExampleControls2" class="carousel-dark slide" data-bs-ride="carousel">
+      <div id="carouselExampleControls3" class="carousel-dark slide" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
       <img src="https://static.igem.wiki/teams/4641/wiki/inclusivity/mediumarticle1.jpeg" class="d-block w-100" >
@@ -205,11 +205,11 @@ We also used a Bio-Art competition and a music composition to ensure that we tau
       <img src="https://static.igem.wiki/teams/4641/wiki/inclusivity/mediumarticle5.jpeg" class="d-block w-100" >
     </div>
   </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls2" data-bs-slide="prev">
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls3" data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Previous</span>
   </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls2" data-bs-slide="next">
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls3" data-bs-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Next</span>
   </button>
@@ -227,7 +227,7 @@ We also used a Bio-Art competition and a music composition to ensure that we tau
   <figcaption style="text-align:center"> 3-Day Bioremediation conclave held in collaboration with team iGEM IIT-Delhi </figcaption>
   </figure>
 
-<p class="mt-5 MAIN-STUFF">Interconnectivity between Science and Art</p>
+<p class="mt-5 MAIN-STUFF" id="section6">Interconnectivity between Science and Art</p>
 <p class="mt-5 sub-stuff"> Science, like any other field, involves creativity and innovation. Science is incorporated everywhere, be it music or artwork. In an attempt to interact with the non-scientific community and bring out the creative aspects of synthetic biology, our team put in substantial efforts.<br> </p>
 
 <p class="mt-5 sub-stuff">
