--- a/wiki/pages/safety.html
+++ b/wiki/pages/safety.html
@@ -58,7 +58,7 @@
               -> All members have to wear lab coats, protective goggles, and nitrile gloves as necessary whilst working in the lab.<br>
               -> Proper sterilisation is undertaken before working in the BSL-2 biosafety cabinet.<br>
               -> All equipment and machinery in the laboratory such as the centrifuge, spectrophotometer, cold storage, autoclave and such, are handled with care and well-maintained. Regular maintenance work is done for them.<br>
-              -> Taking further precautions, the lab is fumigated every 3-4 weeks.<br>
+              -> Taking further precautions, the lab is fumigated every 3-4 weeks.<br><br>
               <b>Use of Harmful Reagents and Procedures:</b><br>
               Some experimental procedures involved using harmful chemicals and reagents, however, all additional safety measures were taken to prevent any harm.<br><br>
               <button class="modal-button" onclick="openModal('modal1')">UV light</button>
@@ -128,9 +128,9 @@
             </p>  
             </p>
               </p>
-              <br><br>
+              <br>
            
-            <p class="mt-3 MAIN-STUFF" id="section4">Safety and Security Session<br></p>
+            <p class="mt-3 MAIN-STUFF" id="section4">4. Safety and Security Session<br></p>
             <p style="font-family: 'Poppins', sans-serif; font-size: 20px;">To equip the second years of MIT Manipal pursuing a B.Tech in Biotechnology with valuable laboratory safety knowledge and hands-on experience, we organised a series of Lab Safety sessions. These sessions took place on the 14th, 18th and 19th of September, 2023, with two half-hour sessions each day, accommodating five students per session to ensure the lab remained spacious and manageable.<br>
               <br>
               The primary objective of these sessions was to familiarise them with essential safety protocols and equipment, equipping them with a solid foundation for the upcoming years. The sessions were structured as follows:
@@ -178,7 +178,7 @@
               The students expressed their gratitude for the informative and engaging sessions, and they enthusiastically embraced the opportunity to familiarise themselves with laboratory safety protocols and equipment. These sessions not only provided them with valuable knowledge but also served as an inspiring introduction to the exciting world of scientific research within our team.
               </p>
               </p>
-            <p class="mt-3 MAIN-STUFF" id="section5">Dual Use<br></p>
+            <p class="mt-3 MAIN-STUFF" id="section5">5. Dual Use<br></p>
             <p style="font-family: 'Poppins', sans-serif; font-size: 20px;"><b>What is Dual Use?</b><br><br>
               Dual Use in the context of science describes the potential of knowledge or technologies to be used by third parties with benevolent and malevolent intentions. (European Commission, 2018)<br><br>
               <b>What is Dual Use research of concern?</b><br><br>
