--- a/wiki/pages/description.html
+++ b/wiki/pages/description.html
@@ -23,11 +23,19 @@
       <svg class="bi me-2" width="16" height="16">
         <use xlink:href="#table" />
       </svg>
-      Damage to Agro Industry
+      Damage to Aquatics
     </a>
   </li>
   <li>
     <a href="#section4" class="nav-link link-dark">
+      <svg class="bi me-2" width="16" height="16">
+        <use xlink:href="#table" />
+      </svg>
+      Damage to Agro Industry
+    </a>
+  </li>
+  <li>
+    <a href="#section5" class="nav-link link-dark">
       <svg class="bi me-2" width="16" height="16">
         <use xlink:href="#grid" />
       </svg>
@@ -35,7 +43,7 @@
     </a>
   </li>
   <li>
-    <a href="#section5" class="nav-link link-dark">
+    <a href="#section6" class="nav-link link-dark">
       <svg class="bi me-2" width="16" height="16">
         <use xlink:href="#people-circle" />
       </svg>
@@ -44,7 +52,7 @@
   </li>
 
   <li>
-    <a href="#section6" class="nav-link link-dark">
+    <a href="#section7" class="nav-link link-dark">
       <svg class="bi me-2" width="16" height="16">
         <use xlink:href="#people-circle" />
       </svg>
@@ -53,7 +61,7 @@
   </li>
 
   <li>
-    <a href="#section7" class="nav-link link-dark">
+    <a href="#section8" class="nav-link link-dark">
       <svg class="bi me-2" width="16" height="16">
         <use xlink:href="#people-circle" />
       </svg>
@@ -62,7 +70,7 @@
   </li>
 
   <li>
-    <a href="#section8" class="nav-link link-dark">
+    <a href="#section9" class="nav-link link-dark">
       <svg class="bi me-2" width="16" height="16">
         <use xlink:href="#people-circle" />
       </svg>
@@ -86,7 +94,7 @@
 
     <img src="https://static.igem.wiki/teams/4641/wiki/project-description-images/figure-1.jpg" class="img-fluid">
 
-    <p class="mt-5 MAIN-STUFF">The Journey of TCC</p>
+    <p class="mt-5 MAIN-STUFF" id="section1">The Journey of TCC</p>
 
     <p class="mt-5 sub-stuff"> PPCPs are consumed globally at a rate of <b>0.1 million tonnes per year</b> and find
       their way into waste water treatment plants [1]. </p>
@@ -101,7 +109,7 @@
       TCC is omnipresent and preserved in the environment and even found to accumulate within our flora and fauna,
       causing <b>hormone disruption</b> and aiding anti-bacterial resistance.</p>
 
-    <p class="mt-5 MAIN-STUFF">Extent of TCC Accumulation</p>
+    <p class="mt-5 MAIN-STUFF" id="section2">Extent of TCC Accumulation</p>
 
     <p class="mt-5 sub-stuff"> At local wastewater treatment plants (WWTPs) in Udupi and Mangalore, India, the average
       concentration of TCC recorded in the <b>sludge</b> was <b>21,000 ng/g dw</b> and <b>13,000 ng/g dw</b>,
@@ -112,7 +120,7 @@
       ng/L and 7.5-102 ng/L TCC were monitored in tap and treated drinking water, respectively [4]. <br><br>
     </p>
 
-    <p class="mt-5 MAIN-STUFF">Damage to Aquatics</p>
+    <p class="mt-5 MAIN-STUFF" id="section3">Damage to Aquatics</p>
 
     <p class="mt-5 sub-stuff">Pertaining to Indian waters, 692 ng/g w/w TCC was accumulated in fish from the Kaveri
       River, India [5]. Victims and their symptoms included:<br><br>
@@ -123,7 +131,7 @@
       endocrine-disruption.
     </p>
 
-    <p class="mt-5 MAIN-STUFF">Damage to Agro Industry</p>
+    <p class="mt-5 MAIN-STUFF" id="section4">Damage to Agro Industry</p>
 
     <p class="mt-5 sub-stuff"> In food crops cultured in <b>contaminated hydroponic media</b>, after four weeks of
       exposure, roots accumulated 86–1,350 mg kg<sup>−1</sup> of antimicrobials and shoots had accumulated 0.33-5.35 mg kg<sup>−1</sup> of
@@ -138,7 +146,7 @@
       participate in <b>antibiotic resistance bacteria selection</b> and may induce antibiotic-resistant genes in these
       bacteria [2]. </p>
 
-    <p class="mt-5 MAIN-STUFF">Existing Methods</p>
+    <p class="mt-5 MAIN-STUFF" id="section5">Existing Methods</p>
 
     <p class="mt-5 sub-stuff"> Adsorption is the most prevalent physical approach to removing TCC from water, but there
       is room for improvement in its operational parameters. Additionally, desorption should be considered to ensure
@@ -155,7 +163,7 @@
       <b>It was found that most methods currently utilised by WWTPs in India aren’t adequate for removing TCC [2].</b>
     </p>
 
-    <p class="mt-5 MAIN-STUFF">Biodegradation of TCC</p>
+    <p class="mt-5 MAIN-STUFF" id="section6">Biodegradation of TCC</p>
 
     <p class="mt-5 sub-stuff"> Isolated from a WWTP in China, <i>Ochrobactrum sp. TCC-2</i> expresses an amidase enzyme
       through the TccA gene which can break down TCC. However, according to literature, it was found to degrade TCC to
@@ -165,7 +173,7 @@
 
     <img src="https://static.igem.wiki/teams/4641/wiki/project-description-images/figure-3.jpg" class="img-fluid">
 
-    <p class="mt-5 MAIN-STUFF">Chloroanilines</p>
+    <p class="mt-5 MAIN-STUFF" id="section7">Chloroanilines</p>
     <p class="mt-5 sub-stuff"> Once degraded by existing methods, toxic chloroaniline byproducts accumulate in the
       environment. According to studies conducted by the World Health Organisation and Centers for Disease Control and
       Prevention, 4-chloroaniline and 3,4-dichloroaniline act as <b>carcinogens</b> and cause
@@ -173,7 +181,7 @@
       leading to <b>cyanosis and hypoxia</b>.
     </p>
 
-    <p class="mt-5 MAIN-STUFF">Our Solution</p>
+    <p class="mt-5 MAIN-STUFF" id="section8">Our Solution</p>
 
     <p class="mt-5 sub-stuff">
     
@@ -194,7 +202,7 @@
     </figure>
     </p>
 
-    <p class="mt-5 MAIN-STUFF">References</p>
+    <p class="mt-5 MAIN-STUFF" id="section9">References</p>
 
     <p class='mt-5 sub-stuff'> [1] Gopal, C. M., Bhat, K., Ramaswamy, B. R., Kumar, V., Singhal, R. K., Basu, H.,
       Udayashankar, H. N., Vasantharaju, S. G., Praveenkumarreddy, Y., Lino, Y., & Balakrishna, K. (2021). Seasonal
